crates/observed_macros/src/snapshots/observed_macros__event__tests__event_field_metric_only.snap
---
source: crates/observed_macros/src/event.rs
expression: output
---
const _: () = {
    impl ::observed::Event for GaugeEvent {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "system.memory",
            ::core::option::Option::Some(::core::any::TypeId::of::<GaugeEvent>()),
            ::core::option::Option::None,
            ::core::option::Option::None,
            true,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "bytes",
                    ::core::option::Option::None,
                    ::core::option::Option::Some(
                        ::observed::metadata::MetricFieldEntry::instrument(
                            "bytes",
                            ::observed::metadata::MetricDescription::new(
                                "system.memory.usage",
                                ::observed::metadata::InstrumentKind::Gauge,
                                "",
                                "",
                            ),
                        ),
                    ),
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.bytes.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
