crates/observed_macros/src/snapshots/observed_macros__event__tests__event_with_message.snap
---
source: crates/observed_macros/src/event.rs
expression: output
---
const _: () = {
    impl ::observed::Event for RequestFailed {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "request.failed",
            ::core::option::Option::Some(::core::any::TypeId::of::<RequestFailed>()),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "request.failed",
                    ::observed::Severity::Warn,
                    ::core::option::Option::Some("Request failed"),
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "reason",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("reason"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|engine| ::observed::Value::from_redacted(&self.reason, engine),
                )?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
