crates/observed_macros/src/snapshots/observed_macros__event__tests__event_with_reference_to_redactable_type.snap
---
source: crates/observed_macros/src/event.rs
expression: output
---
const _: () = {
    impl<'a> ::observed::Event for BorrowedClassified<'a> {
        const DESCRIPTION: ::observed::metadata::EventDescription = ::observed::metadata::EventDescription::new(
            "borrowed.classified",
            ::core::option::Option::Some(
                ::core::any::TypeId::of::<BorrowedClassified<'static>>(),
            ),
            ::core::option::Option::Some(
                ::observed::metadata::LogDescription::new(
                    "borrowed.classified",
                    ::observed::Severity::Info,
                    ::core::option::Option::None,
                ),
            ),
            ::core::option::Option::None,
            false,
            false,
        );
        fn visit_fields(
            &self,
            visitor: &mut ::observed::processing::FieldVisitorFn<'_>,
        ) -> ::core::ops::ControlFlow<()> {
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "name",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("name"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(
                    &FIELD_DESC,
                    &|engine| ::observed::Value::from_redacted(self.name, engine),
                )?;
            }
            {
                const FIELD_DESC: ::observed::metadata::FieldDescriptor = ::observed::metadata::FieldDescriptor::new(
                    "count",
                    ::core::option::Option::Some(
                        ::observed::metadata::LogFieldEntry::new("count"),
                    ),
                    ::core::option::Option::None,
                );
                visitor(&FIELD_DESC, &|_| ::observed::Value::from(self.count.clone()))?;
            }
            ::core::ops::ControlFlow::Continue(())
        }
    }
};
